use extension storage instead of github | 2006 theme | 2012 light theme | many more
not gonna be uploading this version YET 'cuz there's more testing to be done. but please do test this version out

--- a/html/update.html
+++ b/html/update.html
@@ -38,11 +38,12 @@
                     <br>
                     That's all for now, release notes are below!
                 </div>
-                <div class="v1dot6">
+                <div class="v1dot6dot1">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <b>NOTE: Year names have changed -- <i>2012</i> is now <i>2011</i> and <i>2015</i> is now <i>2012</i>.</b>
-                    <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> Currently the new fix doesn't work in embed & fullscreen, it's better than before. Old fix is used instead for those modes.</li>
-                    <li>Also finally fixed the long-time issue of PlayerTube's scripts running multiple times.</li>
+                    <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2012 white theme!</b>
+                    <li><b>FINALLY finished 2006 theme.</b></li>
+                    <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
+                    <li>CSS now uses extension storage so that another <a href="https://github.com/ktg5/PlayerTube/issues/14">#14</a> doesn't happen again.</li>
                 </div>
 
                 <br>
@@ -59,6 +60,12 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot6">
+                    <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    <b>NOTE: Year names have changed -- <i>2012</i> is now <i>2011</i> and <i>2015</i> is now <i>2012</i>.</b>
+                    <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> Currently the new fix doesn't work in embed & fullscreen, it's better than before. Old fix is used instead for those modes.</li>
+                    <li>Also finally fixed the long-time issue of PlayerTube's scripts running multiple times.</li>
+                </div>
                 <div class="v1dot5dot2">
                     <div style="font-weight: 600;">v1.5.2</div>
                     <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/11">#11 - "Old Loading Spinner"</a></li>
