resize fixes | 2012 alt theme fixes | function fixes
might be the final v1.6.1 version but still needs testing

--- a/html/install.html
+++ b/html/install.html
@@ -33,10 +33,10 @@
                 <br>
                 <h3>For those running CustomTube:</h3>
                 <p>
-                    If by any chance you encounter issues when it comes to the look and
-                    feel of the YouTube player with PlayerTube & CustomTube enabled,
-                    please make sure to set "Use current player" in the "Watch Page"
-                    tab in the CustomTube settings.
+                    If you're using CustomTube, you could encounter some issues when
+                    using PlayerTube as well. To make sure nothing bad happens,
+                    please go to the "Watch Page" tab in CustomTube's settings, uncheck
+                    "Use Custom Player Size" in the "Video Player Size" selection.
                 </p>
                 <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
                 <br>
