--- a/html/update.html
+++ b/html/update.html
@@ -44,6 +44,7 @@
                     <li><b>FINALLY finished 2006 theme.</b></li>
                     <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
                     <li>CSS now uses extension storage so that another <a href="https://github.com/ktg5/PlayerTube/issues/14">#14</a> doesn't happen again.</li>
+                    <li>Fix for possible console / html element spam.</li>
                 </div>
 
                 <br>
