update logs & readme

--- a/html/update.html
+++ b/html/update.html
@@ -45,6 +45,8 @@
                     <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
                     <li>CSS now uses extension storage so that another <a href="https://github.com/ktg5/PlayerTube/issues/14">#14</a> doesn't happen again.</li>
                     <li>Fix for possible console / html element spam.</li>
+                    <li>Multiple resize script improvements.</li>
+                    <li>Patch to make sure right-side buttons don't resize in big mode (fullscreen).</li>
                 </div>
 
                 <br>
