additional fixes & report button on the settings page

--- a/html/update.html
+++ b/html/update.html
@@ -47,6 +47,7 @@
                     <li>Fix for possible console / html element spam.</li>
                     <li>Multiple resize script improvements.</li>
                     <li>Patch to make sure right-side buttons don't resize in big mode (fullscreen).</li>
+                    <li>(v1.6.1.1) Multiple Firefox build fixes & add "Report a Issue" link in settings.</li>
                 </div>
 
                 <br>
