--- a/html/update.html
+++ b/html/update.html
@@ -38,16 +38,11 @@
                     <br>
                     That's all for now, release notes are below!
                 </div>
-                <div class="v1dot6dot1">
+                <div class="v1dot6dot2">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2012 white theme!</b>
-                    <li><b>FINALLY finished 2006 theme.</b></li>
-                    <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
-                    <li>CSS now uses extension storage so that another <a href="https://github.com/ktg5/PlayerTube/issues/14">#14</a> doesn't happen again.</li>
-                    <li>Fix for possible console / html element spam.</li>
-                    <li>Multiple resize script improvements.</li>
-                    <li>Patch to make sure right-side buttons don't resize in big mode (fullscreen).</li>
-                    <li>(v1.6.1.1) Multiple Firefox build fixes & add "Report a Issue" link in settings.</li>
+                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/18">#18 -- "HD Lettering Not Showing on Settings Button"</a>.</li>
+                    <li>Multiple 2006 theme improvements (Mainly fixing <a href="https://github.com/ktg5/PlayerTube/issues/16">#16 -- "2006 Player | Progress Bar & Other Issues"</a>).</li>
+                    <li>Now using a "base" CSS that all themes use.</li>
                 </div>
 
                 <br>
@@ -64,6 +59,17 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot6dot1">
+                    <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2012 white theme!</b>
+                    <li><b>FINALLY finished 2006 theme.</b></li>
+                    <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
+                    <li>CSS now uses extension storage so that another <a href="https://github.com/ktg5/PlayerTube/issues/14">#14</a> doesn't happen again.</li>
+                    <li>Fix for possible console / html element spam.</li>
+                    <li>Multiple resize script improvements.</li>
+                    <li>Patch to make sure right-side buttons don't resize in big mode (fullscreen).</li>
+                    <li>(v1.6.1.1) Multiple Firefox build fixes & add "Report a Issue" link in settings.</li>
+                </div>
                 <div class="v1dot6">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
                     <b>NOTE: Year names have changed -- <i>2012</i> is now <i>2011</i> and <i>2015</i> is now <i>2012</i>.</b>
