--- a/html/update.html
+++ b/html/update.html
@@ -17,32 +17,11 @@
             </div>
 
             <div class="text">
-                <div class="customtube-warning">
-                    <h2 class="important">&#9888 Yet again another notice for CustomTube users! &#9888</h2>
-                    <i>Long-time users may remember a message similar to this, but there's different settings to change now!</i>
-                    <br>
-                    With the introduction of PlayerTube v1.6, there are new settings users need to change if they use CustomTube.
-                    <br>
-                    <b>If you use CustomTube, please open up it's settings and make sure to set the current settings that are listed below!</b>
-                    <img src="../img/customtube-settings.png" style=" display: block;padding: 1rem;margin: auto;">
-                    <br>
-                    As seen in the screenshot, please go to the "Watch Page" tab in CustomTube's settings, uncheck "Use Custom Player Size"
-                    in the "Video Player Size" selection.
-                    <br>
-                    And just to be sure you're 100% good, use the "Use current player" option under the "Video Player Style".
-                    <br>
-                    <br>
-                    The reason these settings should be changed is due to PlayerTube's new scripts for the YouTube Progress Bar,
-                    which allow the Progress Bar to fully extend out with the current video size.
-                    <br>
-                    <br>
-                    That's all for now, release notes are below!
-                </div>
-                <div class="v1dot6dot2">
+                <div class="v1dot6dot2dot1">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/18">#18 -- "HD Lettering Not Showing on Settings Button"</a>.</li>
-                    <li>Multiple 2006 theme improvements (Mainly fixing <a href="https://github.com/ktg5/PlayerTube/issues/16">#16 -- "2006 Player | Progress Bar & Other Issues"</a>).</li>
-                    <li>Now using a "base" CSS that all themes use.</li>
+                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 -- "narrow video is stretched (zoomed) to fit"</a>.</li>
+                    <li>Update GitHub issue templates.</li>
+                    <li>Fix past update logs.</li>
                 </div>
 
                 <br>
@@ -59,8 +38,14 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot6dot2">
+                    <div style="font-weight: 600;">v1.6.2</div>
+                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/18">#18 -- "HD Lettering Not Showing on Settings Button"</a>.</li>
+                    <li>Multiple 2006 theme improvements (Mainly fixing <a href="https://github.com/ktg5/PlayerTube/issues/16">#16 -- "2006 Player | Progress Bar & Other Issues"</a>).</li>
+                    <li>Now using a "base" CSS that all themes use.</li>
+                </div>
                 <div class="v1dot6dot1">
-                    <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    <div style="font-weight: 600;">v1.6.1</div>
                     <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2012 white theme!</b>
                     <li><b>FINALLY finished 2006 theme.</b></li>
                     <li>Add <a href="https://github.com/ktg5/PlayerTube/issues/13">#13 -- "Light Theme for 2015 YouTube Player"</a>.</li>
@@ -71,7 +56,7 @@
                     <li>(v1.6.1.1) Multiple Firefox build fixes & add "Report a Issue" link in settings.</li>
                 </div>
                 <div class="v1dot6">
-                    <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    <div style="font-weight: 600;">v1.6</div>
                     <b>NOTE: Year names have changed -- <i>2012</i> is now <i>2011</i> and <i>2015</i> is now <i>2012</i>.</b>
                     <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> Currently the new fix doesn't work in embed & fullscreen, it's better than before. Old fix is used instead for those modes.</li>
                     <li>Also finally fixed the long-time issue of PlayerTube's scripts running multiple times.</li>
