--- a/html/update.html
+++ b/html/update.html
@@ -17,11 +17,14 @@
             </div>
 
             <div class="text">
-                <div class="v1dot6dot2dot1">
+                <div class="v1dot6dot3">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
                     <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 -- "narrow video is stretched (zoomed) to fit"</a>.</li>
-                    <li>Update GitHub issue templates.</li>
+                    <li>Added "no-left-button" & "no-right-button" detection</li>
+                    <li>Fix embed issues for 2012 & 2011</li>
+                    <li>Fix the clip icon by the time display for clips on the 2006 theme (<a href="https://www.youtube.com/clip/UgkxyNXRaAnHXIjM9d-JQB_r32gUnov9sIV6">using this video lol</a>).</li>
                     <li>Fix past update logs.</li>
+                    <li>Update GitHub issue templates.</li>
                 </div>
 
                 <br>
