remake watch later button | fix styling & resize script

--- a/html/install.html
+++ b/html/install.html
@@ -12,7 +12,7 @@
     <body>
         <div id="content">
             <div id="logo">
-                <img src="../img/playertube/logo.png" height="100">
+                <a href="update.html"><img src="../img/playertube/logo.png" height="100"></a>
                 <div class="showVersion"></div>
             </div>
 
@@ -31,15 +31,12 @@
                 userscript extensions like Tampermonkey, plus synced settings across
                 devices connected to the same account on your browser.
                 <br>
-                <h3>For those running CustomTube:</h3>
+                <h3>YouTube Extension Compatibility</h3>
                 <p>
-                    If you're using CustomTube, you could encounter some issues when
-                    using PlayerTube as well. To make sure nothing bad happens,
-                    please go to the "Watch Page" tab in CustomTube's settings, uncheck
-                    "Use Custom Player Size" in the "Video Player Size" selection.
+                    If you use any extra extensions for YouTube,
+                    <a href="extensions.html">please check the Extension Support page</a>
+                    as some extensions may need manual configuration.
                 </p>
-                <img src="../img/customtube-settings.png" style="display: block;margin: auto;" alt="Go to the 'Watch Page' tab in CustomTube's settings, scroll down to 'Video Player Style' and set it to 'Use current player'.">
-                <br>
                 <br>
                 If you possibly step upon an issue such as something with the styling,
                 slower performance, something conflicting with another YouTube extension,
