--- a/html/update.html
+++ b/html/update.html
@@ -12,16 +12,21 @@
     <body>
         <div id="content">
             <div id="logo">
-                <img src="../img/playertube/logo.png" height="100">
+                <a href="update.html"><img src="../img/playertube/logo.png" height="100"></a>
                 <div class="showVersion"></div>
             </div>
 
             <div class="text">
+                <b>Make sure to check the <a href="extensions.html">Extension Support page</a> every update to see if you need to do manual configuration!</b>
+                <br>
                 <div class="v1dot6dot3">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
+                    This update took too long to make...
+                    <br>
                     <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 -- "narrow video is stretched (zoomed) to fit"</a>.</li>
-                    <li>Added "no-left-button" & "no-right-button" detection</li>
-                    <li>Fix embed issues for 2012 & 2011</li>
+                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 -- "[ Bug ] Embed Fixes & [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
+                    <li>Added "no-left-button" & "no-right-button" detection for themes that need it (like 2006).</li>
+                    <li>Remade the Watch Later button used in 2012 & 2011 due to issues.</li>
                     <li>Fix the clip icon by the time display for clips on the 2006 theme (<a href="https://www.youtube.com/clip/UgkxyNXRaAnHXIjM9d-JQB_r32gUnov9sIV6">using this video lol</a>).</li>
                     <li>Fix past update logs.</li>
                     <li>Update GitHub issue templates.</li>
@@ -47,6 +52,9 @@
                     <li>Multiple 2006 theme improvements (Mainly fixing <a href="https://github.com/ktg5/PlayerTube/issues/16">#16 -- "2006 Player | Progress Bar & Other Issues"</a>).</li>
                     <li>Now using a "base" CSS that all themes use.</li>
                 </div>
+
+                <br>
+
                 <div class="v1dot6dot1">
                     <div style="font-weight: 600;">v1.6.1</div>
                     <b>NOTE: "Dark Mode" is now renamed to "Alternate Theme" with the new 2012 white theme!</b>
@@ -58,18 +66,26 @@
                     <li>Patch to make sure right-side buttons don't resize in big mode (fullscreen).</li>
                     <li>(v1.6.1.1) Multiple Firefox build fixes & add "Report a Issue" link in settings.</li>
                 </div>
+
+                <br>
+
                 <div class="v1dot6">
                     <div style="font-weight: 600;">v1.6</div>
                     <b>NOTE: Year names have changed -- <i>2012</i> is now <i>2011</i> and <i>2015</i> is now <i>2012</i>.</b>
                     <li><b>Addition to the long-time issue of the Progress Bar not fully extending.</b> Currently the new fix doesn't work in embed & fullscreen, it's better than before. Old fix is used instead for those modes.</li>
                     <li>Also finally fixed the long-time issue of PlayerTube's scripts running multiple times.</li>
                 </div>
+
+                <br>
+
                 <div class="v1dot5dot2">
                     <div style="font-weight: 600;">v1.5.2</div>
                     <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/11">#11 - "Old Loading Spinner"</a></li>
                     <li>Added <a href="https://github.com/ktg5/PlayerTube/issues/10">#10 - "Add Embed Play Button"</a></li>
                 </div>
+
                 <br>
+
                 <div class="v1dot5dot1">
                     <div style="font-weight: 600;">v1.5.1</div>
                     somewhat a big minor update lol
@@ -78,7 +94,9 @@
                     <li><b>FINALLY fixed <a href="https://github.com/ktg5/PlayerTube/issues/6">#6 - "Progress Bar not moving when video is playing"</a> by getting raw video stats</b></li>
                     <li>Also there's some cool console log styling :O</li>
                 </div>
+
                 <br>
+
                 <div class="v1dot5">
                     <div style="font-weight: 600;">v1.5</div>
                     <li><b>2010 now does not fully extend the progress bar by default. This can be re-enabled by using one of the new settings under, "Fully extend the Progress Bar's height at all times"</b></li>
@@ -92,7 +110,9 @@
                     <li>Added the ability to toggle the fade in & out animation instead of moving the controls down (Disabled by default)</li>
                     <li>(This was added in 1.4 but) When a feature is not in the user's config, the toggle button will flash orange.</li>
                 </div>
+
                 <br>
+
                 <div class="v1dot4">
                     <div style="font-weight: 600;">v1.4</div>
                     <li>Added Dark Mode for the 2010 theme!</li>
@@ -103,7 +123,9 @@
                     <li>Fixed issues with SponsorBlock, CustomTube, & YouTube Redux.</li>
                     <li>Fixed other issues & bugs.</li>
                 </div>
+
                 <br>
+
                 <div class="v1dot3dot1">
                     <div style="font-weight: 600;">v1.3.1</div>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/5">#5 -- "CustomTube's Custom Player Size Bug"</a></li>
@@ -111,7 +133,9 @@
                     <li>Fixed a good amount of spelling mistakes... (Oops)</li>
                     <li>Added onto the GitHub issue templates & ReadMe file.</li>
                 </div>
+
                 <br>
+
                 <div class="v1dot3">
                     <div style="font-weight: 600;">v1.3</div>
                     <li>Fixed an Firefox issue with 2010 theme.</li>
@@ -121,19 +145,25 @@
                     <li>Better color picker for custom theme settings.</li>
                     We're also on the Chrome web-store now!!!
                 </div>
+
                 <br>
+
                 <div class="v1dot2dot1">
                     <div style="font-weight: 600;">v1.2.1</div>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/3">#3 -- "Extension doesn't work on embeds"</a></li>
                 </div>
+
                 <br>
+
                 <div class="v1dot2">
                     <div style="font-weight: 600;">v1.2</div>
                     <li>Extension is accepted on Firefox.</li>
                     <li>Fixed <a href="https://github.com/ktg5/PlayerTube/issues/2">#2 -- "<kbd>moveElement</kbd> function slowing everything down"</a></li>
                     <li>Fixed an issue in the settings popup where settings won't load. -- This was solved by making the popup's script make a new config if the user doesn't have one already.</li>
                 </div>
+
                 <br>
+
                 <div class="v1dot1">
                     <div style="font-weight: 600;">v1.1</div>
                     <li>First version to be uploaded on web-stores! (Chrome & Firefox)</li>
@@ -141,11 +171,13 @@
                     <li>Fixed some issues with the Firefox build.</li>
                     <li>Fixed styling.</li>
                 </div>
+
                 <br>
+
                 <div class="v1">
                     <div style="font-weight: 600;">v1.0</div>
                     <li>This is the first version for the PlayerTube extension!</li>
-                    <li>Fixed <a href="https://github.com/ktg5/YT-HTML5-Player/issues/23">#23</a>, since all images are local.</li>
+                    <li>Fixed <a href="https://github.com/ktg5/YT-HTML5-Player/issues/23">#23 (YT-HTML5-Player)</a>, since all images are local.</li>
                     <li>Fixed styling.</li>
                 </div>
             </div>
