change volume icon depending on volume | add customtube patch for watch later button

--- a/html/update.html
+++ b/html/update.html
@@ -21,13 +21,14 @@
                 <br>
                 <div class="v1dot6dot3">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    This update took too long to make...
+                    This update took too long to make... But I can say that this extension is now 90% stable & finished.
                     <br>
                     <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 -- "narrow video is stretched (zoomed) to fit"</a>.</li>
-                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 -- "[ Bug ] Embed Fixes & [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
+                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 -- "[ Bug ] Embed Fixes & Resize Issues | [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
+                    <li>Volume icon now changes when the user set the volume below 75% & 25% using current volume detection.</li>
                     <li>Added "no-left-button" & "no-right-button" detection for themes that need it (like 2006).</li>
                     <li>Remade the Watch Later button used in 2012 & 2011 due to issues.</li>
-                    <li>Fix the clip icon by the time display for clips on the 2006 theme (<a href="https://www.youtube.com/clip/UgkxyNXRaAnHXIjM9d-JQB_r32gUnov9sIV6">using this video lol</a>).</li>
+                    <li>Fix the clip icon by the time display for clips on the 2006 theme (<a href="https://www.youtube.com/clip/UgkxyNXRaAnHXIjM9d-JQB_r32gUnov9sIV6">using this clip lol</a>).</li>
                     <li>Fix past update logs.</li>
                     <li>Update GitHub issue templates.</li>
                 </div>
