new resize script detection (needs more testing possibly)

--- a/html/update.html
+++ b/html/update.html
@@ -17,22 +17,11 @@
             </div>
 
             <div class="text">
-                <b>Make sure to check the <a href="extensions.html">Extension Support page</a> every update to see if you need to do manual configuration!</b>
-                <br>
-                <div class="v1dot7">
+                <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
+                <br> -->
+                <div class="v1dot7dot1">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
-                    This update took too long to make... <b>But I can say that this extension is now 90% stable & finished.</b>
-                    <br>
-                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 -- "narrow video is stretched (zoomed) to fit"</a>.</li>
-                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 -- "[ Bug ] Embed Fixes & Resize Issues | [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
-                    <li>Volume icon now changes when the user set the volume below 75% & 25% using current volume detection.</li>
-                    <li>Added "no-left-button" & "no-right-button" detection for themes that need it (like 2006).</li>
-                    <li>Remade the Watch Later button used in 2012 & 2011 due to issues.</li>
-                    <li>Allow "Alternate Theme" to be used when "Custom Themes" are enabled, allowing users to use the alternate buttons from that alternate theme.</li>
-                    <li>Fix the clip icon by the time display for clips on the 2006 theme (<a href="https://www.youtube.com/clip/UgkxyNXRaAnHXIjM9d-JQB_r32gUnov9sIV6">using this clip lol</a>).</li>
-                    <li>Fix past update logs.</li>
-                    <li>Fixed multiple other small details CSS-wide.</li>
-                    <li>Update GitHub issue templates.</li>
+                    <li>Improvements to resize script (using new detection).</li>
                 </div>
 
                 <br>
@@ -49,6 +38,24 @@
                 <br>
 
                 <h3>Past versions...</h3>
+                <div class="v1dot7">
+                    <div style="font-weight: 600;">v1.7</div>
+                    This update took too long to make... <b>But I can say that this extension is now 90% stable & finished.</b>
+                    <br>
+                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/20">#20 -- "narrow video is stretched (zoomed) to fit"</a>.</li>
+                    <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/24">#24 -- "[ Bug ] Embed Fixes & Resize Issues | [ 3rd-party ] YouTube Redux messes with PlayerTube"</a>.</li>
+                    <li>Volume icon now changes when the user set the volume below 75% & 25% using current volume detection.</li>
+                    <li>Added "no-left-button" & "no-right-button" detection for themes that need it (like 2006).</li>
+                    <li>Remade the Watch Later button used in 2012 & 2011 due to issues.</li>
+                    <li>Allow "Alternate Theme" to be used when "Custom Themes" are enabled, allowing users to use the alternate buttons from that alternate theme.</li>
+                    <li>Fix the clip icon by the time display for clips on the 2006 theme (<a href="https://www.youtube.com/clip/UgkxyNXRaAnHXIjM9d-JQB_r32gUnov9sIV6">using this clip lol</a>).</li>
+                    <li>Fix past update logs.</li>
+                    <li>Fixed multiple other small details CSS-wide.</li>
+                    <li>Update GitHub issue templates.</li>
+                </div>
+
+                <br>
+
                 <div class="v1dot6dot2">
                     <div style="font-weight: 600;">v1.6.2</div>
                     <li>Fix <a href="https://github.com/ktg5/PlayerTube/issues/18">#18 -- "HD Lettering Not Showing on Settings Button"</a>.</li>
