i'm stupid + css stuff

--- a/html/update.html
+++ b/html/update.html
@@ -22,6 +22,7 @@
                 <div class="v1dot7dot1">
                     <h2 class="showVersion">PlayerTube has been updated to </h2>
                     <li>Improvements to resize script (using new detection).</li>
+                    <li>2012 & 2011 CSS improvements.</li>
                 </div>
 
                 <br>
