--- a/html/install.html
+++ b/html/install.html
@@ -11,13 +11,24 @@
 
     <body>
         <div id="content">
-            <div id="logo">
-                <a href="update.html"><img src="../img/playertube/logo.png" height="100"></a>
-                <div class="showVersion"></div>
+            <div id="top">
+                <div class="logoandver">
+                    <a href="update.html"><img src="../img/playertube/logo.png" height="100"></a>
+                    <div class="showVersion"></div>
+                </div>
+                
+                <nav>
+                    <a href="install.html">Welcome</a>
+                    <a href="update.html">Release Notes</a>
+                    <a href="extensions.html">Extension Support</a>
+                    <a href="themes.html">Custom Themes</a>
+                    <a href="https://github.com/ktg5/PlayerTube/issues">Report a Issue</a>
+                    <a href="https://ktg5.online">ktg5.online</a>
+                </nav>
             </div>
 
             <div class="text">
-                <h2>Yo! What's good!</h2>
+                <h1>Yo! What's good!</h1>
                 Thanks for installing PlayerTube! One of my first browser extensions &
                 one of the best additions to the look & feel of YouTube! (In my best
                 and 100% accurate opinion)
@@ -31,7 +42,7 @@
                 userscript extensions like Tampermonkey, plus synced settings across
                 devices connected to the same account on your browser.
                 <br>
-                <h3>YouTube Extension Compatibility</h3>
+                <h2>YouTube Extension Compatibility</h2>
                 <p>
                     If you use any extra extensions for YouTube,
                     <a href="extensions.html">please check the Extension Support page</a>
@@ -46,6 +57,12 @@
                 <br>
                 <br>
                 Thanks and have the most awesome of awesome days!
+                <br>
+                <br>
+                <h3>PlayerTube Short Credits</h3>
+                <ul>
+                    <li><a href="https://coloris.js.org/" target="_blank">Coloris</a> - Used for custom theme settings (color-related)</li>
+                </ul>
             </div>
 
             <div id="credits">
