mainly resize improvements

--- a/html/update.html
+++ b/html/update.html
@@ -33,10 +33,10 @@
                 <div class="v1dot7dot1">
                     <h1 class="showVersion">PlayerTube has been updated to </h1>
                     <ul>
-                        <li>Improvements to resize script (using new detection).</li>
+                        <li>Improvements to resize script (using custom detection v2.1).</li>
                         <li>2012 & 2011 CSS improvements.</li>
                         <li><a href="themes.html">Custom theme documentation and guide</a>.</li>
-                        <li>Make menu buttons look a bit nicer.</li>
+                        <li>Make configuration menu buttons look a bit nicer.</li>
                         <li>Improvements to all extension pages.</li>
                     </ul>
                 </div>
