--- a/html/update.html
+++ b/html/update.html
@@ -33,11 +33,7 @@
                 <div class="v1dot7dot1">
                     <h1 class="showVersion">PlayerTube has been updated to </h1>
                     <ul>
-                        <li>Improvements to resize script (using custom detection v2.1).</li>
-                        <li>2012 & 2011 CSS improvements.</li>
-                        <li><a href="themes.html">Custom theme documentation and guide</a>.</li>
-                        <li>Make configuration menu buttons look a bit nicer.</li>
-                        <li>Improvements to all extension pages.</li>
+                        <li>Quick update to fix an issue with fake bar toggle not working.</li>
                     </ul>
                 </div>
 
@@ -56,6 +52,14 @@
 
                 <h2>Past versions...</h2>
                 <div class="v1dot7">
+                    <div style="font-weight: 600;">v1.7.1</div>
+                    <ul>
+                        <li>Improvements to resize script (using custom detection v2.1).</li>
+                        <li>2012 & 2011 CSS improvements.</li>
+                        <li><a href="themes.html">Custom theme documentation and guide</a>.</li>
+                        <li>Make configuration menu buttons look a bit nicer.</li>
+                        <li>Improvements to all extension pages.</li>
+                    </ul>
                     <div style="font-weight: 600;">v1.7</div>
                     This update took too long to make... <b>But I can say that this extension is now 90% stable & finished.</b>
                     <br>
