some good stuff i suppose

--- a/html/update.html
+++ b/html/update.html
@@ -30,10 +30,11 @@
             <div class="text">
                 <!-- <b>New updates to the <a href="extensions.html">Extension Support page</a>! Please check it to see if you need to do manual configuration for your extensions!</b>
                 <br> -->
-                <div class="v1dot7dot1">
-                    <h1 class="showVersion">PlayerTube has been updated to </h1>
+                <div class="v1dot7dot3">
+                    <h1>PlayerTube has been updated!</h1>
                     <ul>
-                        <li>Quick update to fix an issue with fake bar toggle not working.</li>
+                        <li>A lot of CSS improvements.</li>
+                        <li>Change of placement for the "Change year of Player" settings option.</li>
                     </ul>
                 </div>
 
@@ -51,7 +52,16 @@
                 <br>
 
                 <h2>Past versions...</h2>
-                <div class="v1dot7">
+                <div class="v1dot7dot2">
+                    <div style="font-weight: 600;">v1.7.2</div>
+                    <ul>
+                        <li>Quick update to fix an issue with fake bar toggle not working.</li>
+                    </ul>
+                </div>
+
+                <br>
+
+                <div class="v1dot7dot1">
                     <div style="font-weight: 600;">v1.7.1</div>
                     <ul>
                         <li>Improvements to resize script (using custom detection v2.1).</li>
@@ -60,6 +70,11 @@
                         <li>Make configuration menu buttons look a bit nicer.</li>
                         <li>Improvements to all extension pages.</li>
                     </ul>
+                </div>
+                
+                <br>
+
+                <div class="v1dot7">
                     <div style="font-weight: 600;">v1.7</div>
                     This update took too long to make... <b>But I can say that this extension is now 90% stable & finished.</b>
                     <br>
